# final-capstone-project-agentic-ai-patents_scout_ai

./: .env.example  .gitignore  README.md  SETUP_GUIDE.md  docker-compose.yml  implementation_plan.md  past_conversation_transcript.md  pyproject.toml  task.md
backend/: pipeline.py  requirements.txt
backend/agents/: gap_analysis_agent.py  innovation_agent.py  patent_agent.py  patentability_agent.py  research_agent.py
backend/config/: settings.py
backend/data_pipeline/: bootstrap_patents.py  build_patent_dataset.py  google_patents_query.sql  patent_balancer.py  patent_classifier.py  patent_cleaner.py  patent_collector.py  patent_ingestion.py
backend/database/: test_connection.py
backend/models/: pipeline.py  pydantic_models.py
backend/prompts/: gap_analysis_agent.txt  innovation_agent.txt  patent_agent.txt  patentability_agent.txt  research_agent.txt
backend/rag/: embedder.py  research_fetcher.py  retriever.py
backend/services/: embedder.py  llm_client.py  patent_fetcher.py  research_fetcher.py  retriever.py
backend/tests/: google_patents_raw_response.json  test_embedder.py  test_gap_analysis_agent.py  test_gemini_models.py  test_google_patents_fetch.py  test_integration.py  test_openalex_fetcher.py  test_patent_agent_live.py  test_patent_fetcher.py  test_patentability_agent.py  test_research_fetcher.py  test_retriever.py  validate_patent_csv.py  verify_data_pipeline.py  verify_gap_analysis_live.py  verify_innovation_agent_live.py  (+3 more)
notebooks/: research_pipeline_rag.ipynb
tests/: run_innovation_test.py  test_patent_agent.py  test_research_agent.py
(+4 files in other folders)
