[project]
name = "final-capstone-project-agentic-ai-patents-scout-ai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.4.0",
    "fastapi>=0.100.0",
    "google-genai>=2.8.0",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.8",
    "langchain-google-genai>=1.0.0",
    "langdetect>=1.0.9",
    "langgraph>=1.2.4",
    "pandas>=2.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "sentence-transformers>=2.2.2",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.22.0",
]
